# OpenAlpha

./: .env.example  .gitignore  README.md  firestore.indexes.json  firestore.rules
backend/: .pre-commit-config.yaml  pyproject.toml
backend/app/: config.py  exceptions.py  main.py
backend/app/agent/: prompts.py  runner.py  tools.py
backend/app/models/: agent.py  filings.py  macro.py  market.py  news.py
backend/app/routers/: agent.py  filings.py  macro.py  market.py  news.py  search.py
backend/app/services/: edgar_service.py  fred_service.py  news_service.py  yfinance_service.py
backend/tests/: conftest.py  mistral_mocks.py  test_agent.py  test_agent_tools.py  test_behavior.py  test_config.py  test_filings.py  test_health.py  test_macro.py  test_market.py  test_news.py  test_prompts.py  test_search.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/commodities/: error.tsx  loading.tsx  page.tsx
frontend/src/app/crypto/: error.tsx  loading.tsx  page.tsx
frontend/src/app/data/: page.tsx
frontend/src/app/health/: route.ts
frontend/src/app/macro/: error.tsx  loading.tsx  page.tsx
frontend/src/app/quant/: page.tsx
frontend/src/components/: Aurora.tsx  SplitText.tsx  agent-alpha-icon.tsx  chart-lines.tsx  commodity-search.tsx  crypto-search.tsx  dashboard-opened-tracker.tsx  data-export-tool.tsx  data-quick-links.tsx  download-data-link.tsx  landing-spotlight.tsx  macro-search.tsx  markdown-message.test.ts  markdown-message.tsx  quant-alpha-icon.tsx  relative-time.tsx  request-quota-badge.tsx  ticker-search.tsx  usage-quota-provider.tsx  usage-unlock-modal.tsx
frontend/src/components/auth/: auth-modal.tsx
frontend/src/components/dashboard/: agent-chat.tsx  commodity-nav.tsx  commodity-overview-grid.tsx  commodity-price-chart.tsx  conversation-history-dialog.tsx  crypto-overview-grid.tsx  crypto-price-chart.tsx  dashboard-layout.tsx  filings-panel.tsx  fundamentals-grid.tsx  macro-chart.tsx  macro-overview-grid.tsx  news-feed.test.ts  news-feed.tsx  overview-card.tsx  price-chart.tsx  voice-input.tsx
frontend/src/components/quant/: quant-surface-plot.tsx  quant-workspace.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: tickers.ts
frontend/src/lib/: api-base.ts  api.ts  chatStorage.ts  commodities.ts  crypto.ts  data-export.ts  date-format.ts  firebase.ts  sse.ts
frontend/src/lib/quant/: black-scholes.ts  greeks-context.test.ts  greeks-context.ts
frontend/src/server/agent/: data-assistant.test.ts  data-assistant.ts  policy.test.ts  policy.ts  prompt.ts  service.ts  (+5 more)
frontend/src/types/: api.ts  chat.ts  react-plotly-js.d.ts
(+90 files in other folders)
